fixed but maybe not responsive footer

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ nav{
     footer{
         width: 100%;
         left: 0;
-        bottom: 0;
-        position: relative;
+        bottom: -10%;
+        position: absolute;
         background-color: gray;
     }
 
@@ -146,19 +146,20 @@ nav{
     footer{
         width: 100%;
         left: 0;
-        bottom: 0;
-        position:relative;
+        bottom: -0%;
+        position:absolute;
         background-color: gray;
         
     }
 
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     body{
         background-color: aqua;
         padding: 0;
         margin: 100px 0 0 0;
+        height: 100%;
         position: static;
 
 
@@ -197,11 +198,9 @@ nav{
     }
 
     article{
-        margin: 0;
         padding: 0;
-        margin-top: 2%;
+        margin: 2% 0 0 0;
         background-color: orange;
-
         width: 100%;
     }
 
@@ -209,13 +208,14 @@ nav{
     .articlebox{
         border: solid red;
         text-align: center;
-        margin-top: 2% 0 0 0;
+        margin: 2% 0 0 0;
         padding: 0;
     
     }
 
     #articlebox1{
         width: 30%;
+        left: 0;
         position: absolute;
 
     }
@@ -242,7 +242,6 @@ nav{
         position: absolute;
         border: solid red;
         background-color: gray;
-        padding: 0;
     }
 
   }
